samples/_failures_safe/1761620123_5acfaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70fa4280.c: In function ‘main’:
./samples/SAFE/__tmp_70fa4280.c:133:5: error: expected expression at end of input
  133 |     if (
      |     ^~
./samples/SAFE/__tmp_70fa4280.c:133:5: error: expected declaration or statement at end of input
